--- a/project_view.html
+++ b/project_view.html
@@ -1,18 +1,220 @@
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+    <meta charset="UTF-8">
+    <title>الفهرس الليبي الموحد</title>
+    <script src="https://cdn.sheetjs.com/xlsx-0.20.0/package/dist/xlsx.full.min.js"></script>
+    <style>
+        body { font-family: 'Segoe UI', Tahoma, sans-serif; background: #eceef1; color: #333; margin: 0; padding: 5px; font-size: 11px; }
+        .project-bar { background: #2c3e50; color: #fff; padding: 5px 10px; display: flex; align-items: center; justify-content: space-between; border-radius: 4px; margin-bottom: 2px; }
+        .compact-grid { display: grid; grid-template-columns: repeat(6, 1fr); gap: 4px; background: #fff; padding: 8px; border: 1px solid #ccc; border-radius: 4px; margin-top: 2px; }
+        .grid-7 { grid-template-columns: repeat(7, 1fr); }
+        label { font-size: 10px; font-weight: bold; color: #555; text-align: center; display: block; margin-bottom: 1px; }
+        input, select { width: 100%; border: 1px solid #bbb; padding: 2px 4px; font-size: 11px; height: 22px; text-align: right; border-radius: 2px; box-sizing: border-box; background: #fdfdfd; }
+        .actions { margin: 5px 0; display: flex; gap: 4px; justify-content: center; flex-wrap: wrap; }
+        .btn { padding: 4px 12px; cursor: pointer; border: none; border-radius: 3px; color: #fff; font-weight: bold; font-size: 10px; }
+        .btn-save { background: #27ae60; } .btn-smart { background: #f39c12; } .btn-imp { background: #e67e22; }
+        .preview-table { width: 100%; border-collapse: collapse; background: #fff; margin-top: 5px; border: 1px solid #ccc; }
+        .preview-table th { background: #f2f2f2; padding: 4px; border: 1px solid #ccc; font-size: 10px; }
+        .preview-table td { border: 1px solid #ccc; padding: 3px; text-align: right; font-size: 11px; }
+        .btn-t { padding: 2px 5px; font-size: 9px; cursor: pointer; border-radius: 2px; border: 1px solid #ccc; background: #f8f9fa; margin: 0 1px; }
+        #smartModal { display:none; position:fixed; top:50%; left:50%; transform:translate(-50%, -50%); background:white; border:2px solid #2c3e50; padding:15px; z-index:9999; width:400px; box-shadow: 0 5px 20px rgba(0,0,0,0.3); border-radius:5px; }
+    </style>
+</head>
+<body>
+
+<div class="project-bar">
+    <div><strong>الفهرس الليبي الموحد</strong> | <span id="activeProjectLabel"></span></div>
+    <div style="display:flex; gap:5px;">
+        <button onclick="document.getElementById('smartModal').style.display='block'" class="btn btn-smart">⚡ إدخال ذكي</button>
+        <button onclick="document.getElementById('fileInput').click()" class="btn btn-imp">📥 استيراد Excel</button>
+        <input type="file" id="fileInput" style="display:none" onchange="importExcel(event)">
+        <button onclick="createNewProject()" class="btn" style="background:#2980b9">+ مشروع جديد</button>
+        <select id="projSelect" onchange="switchProject(this.value)" style="height:20px; font-size:10px; width:100px;"></select>
+    </div>
+</div>
+
+<div id="smartModal">
+    <h4 style="margin:0 0 10px 0;">توزيع النص آلياً (مؤلف. عنوان. مكان: ناشر، سنة)</h4>
+    <textarea id="smartInput" style="width:100%; height:80px; padding:5px; border:1px solid #ccc; font-family:inherit;" placeholder="ألصق النص هنا..."></textarea>
+    <div style="margin-top:10px; text-align:left;">
+        <button class="btn btn-save" onclick="processSmart()">توزيع البيانات</button>
+        <button class="btn" style="background:#c0392b" onclick="document.getElementById('smartModal').style.display='none'">إلغاء</button>
+    </div>
+</div>
+
+<form id="biblioForm">
+    <div class="compact-grid">
+        <div><label>رأس الموضوع</label><input type="text" id="subject" class="in" list="subList"></div>
+        <div><label>إحالة انظر</label><input type="text" id="see" class="in" list="subList"></div>
+        <div><label>إحالة انظر أيضاً</label><input type="text" id="see_also" class="in" list="subList"></div>
+        <div><label>المؤلف</label><input type="text" id="author" class="in"></div>
+        <div><label>العنوان</label><input type="text" id="title" class="in"></div>
+        <div><label>المشاركون</label><input type="text" id="collab" class="in"></div>
+    </div>
+    <div class="compact-grid">
+        <div><label>مكان النشر</label><input type="text" id="place" class="in"></div>
+        <div><label>الناشر</label><input type="text" id="publisher" class="in"></div>
+        <div><label>السنة</label><input type="text" id="year" class="in"></div>
+        <div><label>صفحات</label><input type="text" id="pages" class="in"></div>
+        <div><label>الطبعة</label><input type="text" id="edition" class="in"></div>
+        <div><label>السلسلة</label><input type="text" id="series" class="in"></div>
+    </div>
+    <div class="compact-grid grid-7">
+        <div><label>عنوان أصلي</label><input type="text" id="orig_title" class="in"></div>
+        <div><label>مؤلف أصلي</label><input type="text" id="orig_author" class="in"></div>
+        <div><label>جهة الإصدار</label><input type="text" id="org" class="in"></div>
+        <div><label>العدد</label><input type="text" id="count" class="in"></div>
+        <div><label>التبعية</label><input type="text" id="affil" class="in"></div>
+        <div><label>الدولة</label><input type="text" id="country" class="in"></div>
+        <div><label>النوع</label><select id="type" class="in"><option>كتاب</option><option>مقالة</option><option>رسالة</option></select></div>
+    </div>
+</form>
+
+<datalist id="subList"></datalist>
+
+<div class="actions">
+    <button class="btn btn-save" onclick="saveData()">حفظ السجل</button>
+    <button class="btn" style="background:#2980b9" onclick="exportToExcel()">Excel</button>
+    <button class="btn" style="background:#8e44ad" onclick="previewFullList()">المعاينة</button>
+    <button class="btn" style="background:#555" onclick="previewIndex('author')">كشاف المؤلفين</button>
+    <button class="btn" style="background:#d43f3a" onclick="previewIndex('title')">كشاف العناوين</button>
+    <button class="btn" style="background:#555" onclick="previewIndex('collab')">كشاف المترجمين</button>
+    <button class="btn" style="background:#d43f3a" onclick="previewIndex('orig_title')">العنوان الأصلي</button>
+</div>
+
+<table class="preview-table">
+    <thead><tr><th style="width:30px">ت</th><th style="width:20%">رأس الموضوع</th><th>البيان الببليوغرافي</th><th style="width:95px">الإجراء</th></tr></thead>
+    <tbody id="tableBody"></tbody>
+</table>
+
+<script>
+let projects = JSON.parse(localStorage.getItem('p_list')) || ['المشروع_1'];
+let currentProj = localStorage.getItem('p_active') || 'المشروع_1';
+let records = JSON.parse(localStorage.getItem('recs_' + currentProj)) || [];
+let editIdx = -1;
+
+const cln = (s) => s ? s.trim().replace(/^ال(?=[^ل])/, "").replace(/[أإآ]/g, "ا").replace(/ى/g, "ي") : "";
+
+function processSmart() {
+    let raw = document.getElementById('smartInput').value;
+    let p = raw.split('.');
+    if(p[0]) document.getElementById('author').value = p[0].trim();
+    if(p[1]) document.getElementById('title').value = p[1].trim();
+    if(p[2] && p[2].includes(':')) {
+        let i = p[2].split(':');
+        document.getElementById('place').value = i[0].trim();
+        if(i[1].includes('،')) {
+            let n = i[1].split('،');
+            document.getElementById('publisher').value = n[0].trim();
+            document.getElementById('year').value = n[1].replace(/\D/g,'');
+        }
+    }
+    document.getElementById('smartModal').style.display='none';
+    document.getElementById('smartInput').value = '';
+}
+
+function saveData() {
+    let d = {}; document.querySelectorAll('.in').forEach(i => d[i.id] = i.value.trim());
+    if(!d.subject) return alert("رأس الموضوع مطلوب");
+    if(editIdx > -1) records[editIdx] = d; else records.push(d);
+    editIdx = -1;
+    records.sort((a,b) => cln(a.subject).localeCompare(cln(b.subject), 'ar'));
+    updateUI(); document.getElementById('biblioForm').reset();
+}
+
+function updateUI() {
+    localStorage.setItem('recs_'+currentProj, JSON.stringify(records));
+    let h = ''; let s = 1; let subs = new Set();
+    records.forEach((r, i) => {
+        subs.add(r.subject);
+        let hasData = !!r.title;
+        h += `<tr>
+            <td style="text-align:center">${(hasData && !r.see) ? s++ : '--'}</td>
+            <td><strong>${r.subject}</strong>${r.see?'<br>انظر: '+r.see:''}${r.see_also?'<br><small>انظر أيضا: '+r.see_also+'</small>':''}</td>
+            <td>${hasData ? `<b>${r.author}</b>. ${r.title}. - ${r.place}: ${r.publisher}, ${r.year}.` : ''}</td>
+            <td style="text-align:center">
+                <button class="btn-t" onclick="editRec(${i})">تعديل</button>
+                <button class="btn-t" style="color:red" onclick="deleteRec(${i})">حذف</button>
+            </td>
+        </tr>`;
+    });
+    document.getElementById('tableBody').innerHTML = h;
+    document.getElementById('subList').innerHTML = Array.from(subs).sort().map(x=>`<option value="${x}">`).join('');
+    document.getElementById('projSelect').innerHTML = projects.map(p=>`<option ${p===currentProj?'selected':''}>${p}</option>`).join('');
+    document.getElementById('activeProjectLabel').innerText = currentProj;
+}
+
+// الكود البرمجي الذي أرسلتَه حرفياً مع دمج معالجة النصوص المتعددة
 function previewIndex(type) {
     let win = window.open('', '', 'width=900,height=700');
     let content = `<div dir="rtl" style="font-family:'Times New Roman', serif; padding:1in; column-count: 2; column-gap: 30px; font-size:11pt;">`;
     let indexMap = {}; let serial = 1;
+    
     records.forEach(r => {
-        if(!r.see && !r.see_also) {
+        if(!r.see && !r.see_also && r.title) {
             let val = r[type];
-            if(val) { if(!indexMap[val]) indexMap[val] = []; indexMap[val].push(serial); }
+            if(val) {
+                // تقسيم القيم في حال وجود أكثر من مؤلف مفصول بـ "؛"
+                val.split('؛').forEach(v => {
+                    v = v.trim();
+                    if(v) {
+                        if(!indexMap[v]) indexMap[v] = [];
+                        indexMap[v].push(serial);
+                    }
+                });
+            }
             serial++;
         }
     });
+
     Object.keys(indexMap).sort((a,b)=>a.localeCompare(b,'ar')).forEach(key => {
         content += `<div style="margin-bottom:5pt; border-bottom:0.5pt solid #eee;">
             ${key} <span style="float:left; font-weight:bold;">(${indexMap[key].join(')( ')})</span>
             <div style="clear:both"></div>
         </div>`;
     });
-    content += `</div>`; win.document.write(content);
+    
+    content += `</div>`; 
+    win.document.write(content);
+}
+
+function importExcel(e) {
+    const file = e.target.files[0];
+    const reader = new FileReader();
+    reader.onload = (evt) => {
+        const wb = XLSX.read(evt.target.result, {type: 'binary'});
+        const ws = wb.Sheets[wb.SheetNames[0]];
+        records = XLSX.utils.sheet_to_json(ws);
+        updateUI();
+    };
+    reader.readAsBinaryString(file);
+}
+
+function previewFullList() {
+    let win = window.open(); let s = 1; let lastSub = "";
+    let c = `<div dir="rtl" style="padding:1in; font-family:'Times New Roman'; font-size:14px;">`;
+    records.forEach(r => {
+        if(r.subject !== lastSub) {
+            c += `<h3 style="text-align:center; background:#f0f0f0; padding:5px; border:1px solid #ccc; margin-top:20px;">${r.subject}</h3>`;
+            if(r.see) c += `<p style="text-align:center;">انظر: ${r.see}</p>`;
+            if(r.see_also) c += `<p style="text-align:center;">انظر أيضاً: ${r.see_also}</p>`;
+            lastSub = r.subject;
+        }
+        if(r.title && !r.see) {
+            c += `<p>(${s++}) <b>${r.author}</b>. ${r.title}. - ${r.place}: ${r.publisher}, ${r.year}.</p>`;
+        }
+    });
+    win.document.write(c + `</div>`);
+}
+
+function editRec(i) { editIdx = i; Object.keys(records[i]).forEach(k => { if(document.getElementById(k)) document.getElementById(k).value = records[i][k]; }); }
+function deleteRec(i) { if(confirm("هل تريد حذف هذا السجل؟")) { records.splice(i,1); updateUI(); } }
+function switchProject(v) { localStorage.setItem('p_active', v); location.reload(); }
+function createNewProject() { let n = prompt("اسم المشروع الجديد:"); if(n){ projects.push(n); localStorage.setItem('p_list', JSON.stringify(projects)); switchProject(n); }}
+function exportToExcel() { const ws = XLSX.utils.json_to_sheet(records); const wb = XLSX.utils.book_new(); XLSX.utils.book_append_sheet(wb, ws, "Records"); XLSX.writeFile(wb, `${currentProj}.xlsx`); }
+
+window.onload = updateUI;
+</script>
+</body>
+</html>
